# NextTimeBetter

./: Readme.md  pyproject.toml
backend/: .env  main.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: TemplatePage.vue  index.vue  template.vue
frontend/src/pages/: IndexPage.vue
