[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["iminght"]
readme = "README.md"
# package-mode = false  

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# poetry配置启动命令
[tool.poetry.scripts]
start = "uvicorn backend.main:app --reload"
